--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IniciarSesion"
-    android:background="@drawable/login">
+    android:background="@drawable/pantalla_iniciar_sesion">
     <Button
         android:id="@+id/iniciar_sesion_boton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingresar"
-        android:textColor="@color/morado"
+        android:textColor="@color/lila"
         android:backgroundTint="@color/amarillo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
         android:id="@+id/contrasena_iniciar_sesion"
         android:layout_width="190dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/blanco"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@id/iniciar_sesion_boton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:layout_width="190dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/blanco"
         app:layout_constraintBottom_toTopOf="@id/text1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:text="Contraseña"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         app:layout_constraintBottom_toTopOf="@id/contrasena_iniciar_sesion"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintVertical_bias="1.56"
@@ -87,7 +87,7 @@
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:text="Nombre de Usuario"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         app:layout_constraintBottom_toTopOf="@id/correo_electronico_iniciar_sesion"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintVertical_bias="1.8"
@@ -100,7 +100,7 @@
     <TextView
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         android:text="Iniciar Sesion"
         android:textSize="35dp"
 
