--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -10,7 +10,7 @@
         android:id="@+id/image_view_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/fondopantalla"
+        android:src="@drawable/pantalla_crear_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="48dp"
         android:text="CREAR CUENTA"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="112dp"
         android:text="Nombre completo"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="20sp"/>
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@id/full_name_edit_text"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         android:textSize="20sp"/>
 
     <EditText
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@id/correo_electronico_crear_cuenta"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         android:textSize="20sp"/>
 
     <EditText
@@ -111,7 +111,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         android:text="Confirmar contraseña"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/contrasena_crear_cuenta"
         android:textSize="20sp"/>
