Pantalla Iniciar Sesion Correccion

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="lilaclaro">#FFBB86FC</color>
+    <color name="purpura">#FF6200EE</color>
+    <color name="morado">#FF3700B3</color>
+    <color name="verdeTurquesaClaro">#FF03DAC5</color>
+    <color name="verdeOscuro">#FF018786</color>
+    <color name="negro">#FF000000</color>
+    <color name="blanco">#FFFFFFFF</color>
     <color name="rojo">#FF0000</color>
     <color name="rosa">#F5533B</color>
-    <color name="morado">#B886F8</color>
+    <color name="lila">#B886F8</color>
     <color name="amarillo">#FFFF00</color>
-    <color name="cafe">#3BIE08</color>
-    <color name="celeste">#A9F5F2</color>
+    <color name="celestePastel">#A9F5F2</color>
+    <color name="verde">#4BF286</color>
+    <color name="azulclaro">#88A2F2</color>
+    <color name="naranjaclaro">#F2622E</color>
+    <color name="amarilloOpaco">#F2E313</color>
+    <color name="amarilloOscuro">#F2CF1D</color>
+    <color name="royalBlue">#3081DB</color>
+    <color name="aquamarine">#6EFAB7</color>
+    <color name="lightSkyBlue">#84D4FA</color>
+    <color name="violet">#F284FA</color>
+    <color name="verdeAmarillo">#A9FA6D</color>
+    <color name="plomoOscuro">#727272</color>
+    <color name="gris">#BEBEBE</color>
+
 
 </resources>
