--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -4,141 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pantalla_crear_cuenta"
     tools:context=".CrearCuenta">
 
-    <ImageView
-        android:id="@+id/image_view_photo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/fondopantalla"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
-
     <TextView
-        android:id="@+id/textView_centered"
+        android:id="@+id/crear_cuenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_marginTop="48dp"
-        android:text="CREAR CUENTA"
-        android:textColor="@color/white"
-        app:layout_constraintHorizontal_bias="0.467"
+        android:text="@string/crear_cuenta"
+        android:textColor="@color/blanco"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="30sp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/full_name_label"
+        android:id="@+id/nombre_completo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="112dp"
-        android:text="Nombre completo"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="20sp"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/nombre_completo"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/crear_cuenta" />
 
     <EditText
-        android:id="@+id/full_name_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/full_name_label"
+        android:id="@+id/edit_text_nombre_completo"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginEnd="20dp"
+        android:background="@color/blanco"
+        android:hint="@string/edit_text_nombre_completo"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@id/nombre_completo" />
 
     <TextView
-        android:id="@+id/correo_electronico"
+        android:id="@+id/nombre_usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correo electrónico"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/full_name_edit_text"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/nombre_de_usuario"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_nombre_completo" />
 
     <EditText
+        android:id="@+id/edit_text_nombre_usuario"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/blanco"
+        android:hint="@string/edit_text_nombre_de_usuario"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@id/nombre_usuario" />
+
+    <TextView
         android:id="@+id/correo_electronico_crear_cuenta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/correo_electronico"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" />
-
-    <TextView
-        android:id="@+id/contrasena"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contraseña"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/correo_electronico_crear_cuenta"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/correo_electronico_crear_cuenta"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/white"
-        android:textSize="20sp"/>
+        app:layout_constraintTop_toBottomOf="@id/edit_text_nombre_usuario" />
 
     <EditText
+        android:id="@+id/edit_text_correo_electronico_crear_cuenta"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/blanco"
+        android:hint="@string/edit_text_correo_electronico"
+        android:inputType="textWebEmailAddress"
+        app:layout_constraintTop_toBottomOf="@id/correo_electronico_crear_cuenta" />
+
+    <TextView
         android:id="@+id/contrasena_crear_cuenta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/contrasena"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" />
-
-    <TextView
-        android:id="@+id/confirm_password_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:text="Confirmar contraseña"
-        android:textColor="@color/white"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/contrasena_crear_cuenta"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/contrasena_crear_cuenta"
-        android:textSize="20sp"/>
+        app:layout_constraintTop_toBottomOf="@id/edit_text_correo_electronico_crear_cuenta" />
 
     <EditText
-        android:id="@+id/confirm_password_edit_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:id="@+id/edit_text_contrasena_crear_cuenta"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/blanco"
+        android:hint="@string/edit_text_constrasena_crear_cuenta"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@id/contrasena_crear_cuenta" />
+
+    <TextView
+        android:id="@+id/confirmar_contrasena_crear_cuenta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/confirmar_contrasena_crear_cuenta"
+        android:textColor="@color/blanco"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password_label" />
+        app:layout_constraintTop_toBottomOf="@id/edit_text_contrasena_crear_cuenta" />
+
+    <EditText
+        android:id="@+id/edit_text_confirmar_contrasena_crear_cuenta"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/blanco"
+        android:hint="@string/edit_text_confirmar_contrasena_crear_cuenta"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/confirmar_contrasena_crear_cuenta" />
 
     <Button
-        android:id="@+id/crear_cuenta_boton"
+        android:id="@+id/boton_crear_cuenta_registrarse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:text="Registrarse"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/boton_crear_cuenta_registrarse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text" />
+        app:layout_constraintTop_toBottomOf="@id/edit_text_confirmar_contrasena_crear_cuenta" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
