--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -11,7 +11,7 @@
         android:id="@+id/crear_cuenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="100dp"
         android:text="@string/crear_cuenta"
         android:textColor="@color/blanco"
         android:textSize="30sp"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:text="@string/nombre_completo"
         android:textColor="@color/blanco"
         android:textSize="20sp"
@@ -34,7 +34,7 @@
     <EditText
         android:id="@+id/edit_text_nombre_completo"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
@@ -58,7 +58,7 @@
     <EditText
         android:id="@+id/edit_text_nombre_usuario"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
@@ -82,7 +82,7 @@
     <EditText
         android:id="@+id/edit_text_correo_electronico_crear_cuenta"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
@@ -106,7 +106,7 @@
     <EditText
         android:id="@+id/edit_text_contrasena_crear_cuenta"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
@@ -130,7 +130,7 @@
     <EditText
         android:id="@+id/edit_text_confirmar_contrasena_crear_cuenta"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
@@ -147,6 +147,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:text="@string/boton_crear_cuenta_registrarse"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_text_confirmar_contrasena_crear_cuenta" />
