--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="verdeOscuro">#FF018786</color>
     <color name="negro">#FF000000</color>
     <color name="blanco">#FFFFFFFF</color>
+    <color name="colorpiel">#D16363</color>
     <color name="rojo">#FF0000</color>
     <color name="rosa">#F5533B</color>
     <color name="lila">#B886F8</color>
