--- a/app/src/main/res/layout/activity_pantalla_principal_juegos.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal_juegos.xml
@@ -18,13 +18,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
+        android:elevation="1dp"
+        android:text="@string/juegos"
         android:textColor="@color/blanco"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/juegos"
-        android:elevation="1dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
@@ -47,290 +47,30 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fondo_tituloJuegos">
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/fondo_tituloJuegos">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tituloJuego_RummiKub"
-                android:layout_width="wrap_content"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pantalla_juegos_recycler_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="45dp"
-                android:layout_marginTop="20dp"
-                android:textSize="27sp"
-                app:layout_constraintLeft_toRightOf="@id/image_RummiKub"
-                app:layout_constraintTop_toBottomOf="@id/megusta_boton4"
-                android:text="@string/rummikub" />
+                tools:listitem="@layout/item_juego_juegos">
 
-            <TextView
-                android:id="@+id/tituloJuego_Loba"
-                android:layout_width="81dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="85dp"
-                android:layout_marginTop="19dp"
-                android:textSize="27sp"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Loba"
-                app:layout_constraintTop_toBottomOf="@id/megusta_boton3"
-                android:text="@string/loba" />
+            </androidx.recyclerview.widget.RecyclerView>
 
-            <TextView
-                android:id="@+id/TituloJuego_Uno"
-                android:layout_width="65dp"
-                android:layout_height="43dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="10dp"
-                android:textSize="27sp"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Uno"
-                app:layout_constraintTop_toBottomOf="@id/megusta_boton1"
-                android:text="@string/Uno" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
 
+        </LinearLayout>
 
-            <ImageView
-                android:id="@+id/image_Monopoly"
-                android:layout_width="229dp"
-                android:layout_height="110dp"
-                android:layout_marginStart="-25dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/monopoly_icon"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
-
-            <TextView
-                android:id="@+id/tituloJuego_Monopoly"
-                android:layout_width="206dp"
-                android:layout_height="49dp"
-                android:layout_marginTop="15dp"
-                android:text="@string/monopoly"
-                android:textSize="27sp"
-                app:layout_constraintLeft_toRightOf="@id/image_Monopoly"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imagen_Uno"
-                android:layout_width="125dp"
-                android:layout_height="140dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="35dp"
-                android:src="@drawable/uno_card"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_Monopoly" />
-
-            <ImageView
-                android:id="@+id/imagen_Loba"
-                android:layout_width="135dp"
-                android:layout_height="140dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="23dp"
-                android:src="@drawable/loba_icon"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imagen_Uno" />
-
-            <ImageView
-                android:id="@+id/image_RummiKub"
-                android:layout_width="140dp"
-                android:layout_height="166dp"
-                android:layout_marginStart="20dp"
-                android:src="@drawable/rumikub_icon"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imagen_Loba" />
-
-            <ImageView
-                android:id="@+id/megusta_boton1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="217dp"
-                android:src="@drawable/boton_like"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/comosejuegamonopoly" />
-
-            <ImageView
-                android:id="@+id/nomegusta_boton1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="76dp"
-                android:src="@drawable/boton_dislike"
-                app:layout_constraintLeft_toLeftOf="@id/megusta_boton1"
-                app:layout_constraintTop_toBottomOf="@id/comosejuegamonopoly" />
-
-            <ImageView
-                android:id="@+id/nomegusta_boton2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="142dp"
-                android:src="@drawable/boton_dislike"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Uno"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegauno"
-
-                />
-
-            <ImageView
-                android:id="@+id/megusta_boton3"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="66dp"
-                android:src="@drawable/boton_like"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Uno"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegauno" />
-
-
-            <TextView
-                android:id="@+id/botonDescripcionMonopoly"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="-12dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/descripcion"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/image_Monopoly"
-                app:layout_constraintTop_toBottomOf="@id/tituloJuego_Monopoly"
-
-                />
-
-            <TextView
-                android:id="@+id/comosejuegamonopoly"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/como_se_juega"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/image_Monopoly"
-                app:layout_constraintTop_toBottomOf="@id/botonDescripcionMonopoly"
-
-                />
-
-            <TextView
-                android:id="@+id/botonDescripcionUno"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="53dp"
-                android:layout_marginTop="-9dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/descripcion"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Uno"
-                app:layout_constraintTop_toBottomOf="@id/TituloJuego_Uno"
-
-
-                />
-
-            <TextView
-                android:id="@+id/botoncomosejuegauno"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="53dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/como_se_juega"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Uno"
-                app:layout_constraintTop_toBottomOf="@id/botonDescripcionUno" />
-
-            <TextView
-                android:id="@+id/botonDescripcionLoba"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="49dp"
-                android:layout_marginTop="1dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/descripcion"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Loba"
-                app:layout_constraintTop_toBottomOf="@id/tituloJuego_Loba"
-
-                />
-
-            <TextView
-                android:id="@+id/botoncomosejuegaLoba"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/como_se_juega"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Loba"
-                app:layout_constraintTop_toBottomOf="@id/botonDescripcionLoba" />
-
-            <ImageView
-                android:id="@+id/megusta_boton4"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="53dp"
-                android:src="@drawable/boton_like"
-                app:layout_constraintLeft_toRightOf="@id/imagen_Loba"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegaLoba" />
-
-            <ImageView
-                android:id="@+id/nomegusta_boton4"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="22dp"
-                android:src="@drawable/boton_dislike"
-                app:layout_constraintLeft_toRightOf="@id/megusta_boton3"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegaLoba" />
-
-            <TextView
-                android:id="@+id/botonDescripcionRummikub"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="43dp"
-                android:layout_marginTop="1dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/descripcion"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/image_RummiKub"
-                app:layout_constraintTop_toBottomOf="@id/tituloJuego_RummiKub" />
-
-            <TextView
-                android:id="@+id/botoncomosejuegaRummikub"
-                android:layout_width="145dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="43dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/stroke"
-                android:gravity="center"
-                android:text="@string/como_se_juega"
-                android:textColor="@color/negro"
-                app:layout_constraintLeft_toRightOf="@id/image_RummiKub"
-                app:layout_constraintTop_toBottomOf="@id/botonDescripcionRummikub" />
-
-            <ImageView
-                android:id="@+id/megusta_boton5"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="53dp"
-                android:src="@drawable/boton_like"
-                app:layout_constraintLeft_toRightOf="@id/image_RummiKub"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegaRummikub" />
-
-            <ImageView
-                android:id="@+id/nomegusta_boton5"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="22dp"
-                android:src="@drawable/boton_dislike"
-                app:layout_constraintLeft_toRightOf="@id/megusta_boton5"
-                app:layout_constraintTop_toBottomOf="@id/botoncomosejuegaRummikub" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
