--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="verdeAmarillo">#A9FA6D</color>
     <color name="plomoOscuro">#727272</color>
     <color name="gris">#BEBEBE</color>
+    <color name="rosabebe">#E67F70</color>
 
 </resources>
