--- a/app/src/main/res/layout/activity_categoria_accion.xml
+++ b/app/src/main/res/layout/activity_categoria_accion.xml
@@ -10,7 +10,7 @@
         android:id="@+id/fondo_crear_actividades"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:background="@color/amarillo"
+        android:background="@color/rojo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,44 +36,35 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <View
-        android:id="@+id/fondo_boton"
-        android:layout_width="200dp"
-        android:layout_height="70dp"
-        android:background="@drawable/borde_botones"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/boton_pantalla_principal2"
+    <ImageButton
+        android:id="@+id/boton_volver_atras_crear_actividad"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/boton_pantalla_principal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/boton_votar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <View
         android:id="@+id/fondo_boton_votaciones"
-        android:layout_width="192dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginStart="200dp"
         android:background="@drawable/borde_botones"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/boton_votacion"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="47dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/boton_volver_atras"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier2"
@@ -104,6 +95,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
